--- a/ktview/templates/index.html
+++ b/ktview/templates/index.html
@@ -1,2 +1,24 @@
 <html>
+    <head>
+        <title>KTView</title>
+        <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+        <script src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/plotly-latest.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
+    </head>
+    <body>
+        <div class="container">
+            <div class="page-header">
+                <h1>KTView</h1>
+            </div>
+        </div>
+
+        <div id="plot"></div> 
+
+        <form action="/upload" id="input" method="post" name="input" enctype="multipart/form-data">
+            <input id="file" type="file" name="file" multiple/>
+            <input id="upload" type="submit" name="upload" value="Upload"/>
+        </form>
+    </body>
 </html>
