Send columns from flask to client

--- a/ktview/static/css/styles.css
+++ b/ktview/static/css/styles.css
@@ -1,9 +1,14 @@
 body {
+    color: black;
     font-family: arial, sans-serif;
 }
 
 .header-label {
     border: 1px solid black;
+}
+
+.selected {
+    color: green;
 }
 
 #plot {
