--- a/ktview/templates/index.html
+++ b/ktview/templates/index.html
@@ -1,53 +1,59 @@
 <html>
-   <head>
-        <title>KTView</title>
+    <head>
+        <title>Calibration Dashboard</title>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
         <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
         <script src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/plotly-latest.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/canvasjs.min.js') }}"></script>
     </head>
+
     <body>
-        <div class="container-fluid">
-            <div class="header">
-                <h1>KT/CT and Blackbody</h1>
-            </div>
-
-            <!-- Select columns from data -->
-            <div class="row">
-                <div class="col-md-2">
-                    <p>Columns</p>
-                </div>
-                <div class="col-md-10">
-                    {% for header in headers %}
-                        <a href="#" class="header-label deselected">{{ header }}</a>
-                    {% endfor %}
-                </div>
-            </div>
-
-            <!-- KT/CT settings -->
-            <div class="row">
-                <div class="col-md-2">
-                    <p>Sample rate (Hz)</p>
-                    <input type="number" name="samplerate"/>
-                </div>
-                <div class="col-md-2">
-                    <p>Sample period (s)</p>
-                    <input type="number" name="sampleperiod"/>
-                </div>
-                <div class="col-md-2">
-                    <p>Stabilization period (s)</p>
-                    <input type="number" name="stabperiod"/>
-                </div>
-            </div>
-
-        <div id="plot"></div> 
-
-        <form action="/" id="input" method="post" name="input" enctype="multipart/form-data">
-            <input id="file" type="file" name="file" multiple/>
-            <input id="upload" type="submit" name="upload" value="Upload"/>
-        </form>
-        
+        <div>
+            {% for header in headers %}
+                <input type="checkbox" class="check-header" name="{{ loop.index }}" value="{{ header }}">
+            {% endfor %}
         </div>
+        <div id="canvas"></div>
+        <div>
+            <form action="/" method="post" name="input" enctype="multipart/form-data">
+                <input type="file" name="file" multiple/>
+                <input type="submit" name="upload"/>
+            </form>
+        </div>
+
+        <script type="text/javascript">
+            $(document).ready(function() {
+
+                // Send a list of checked (desired) columns whenever a new one is selected. We expect the data from those columns in return.
+                $(".check-header").click(function(event) {
+                    var columns = [];
+                    $(".check-header").each(function(index) {
+                        if($(this).prop("checked")) {
+                            columns.push(index+1);
+                        }
+                    });
+                    columns = columns.join();
+                    console.log(columns);
+                    $.ajax({
+                        type: "POST",
+                        contentType: "application/json; charset=utf-8",
+                        url: "/change_data",
+                        data: columns,
+                        dataType: "json"
+                    });
+                });
+
+                var chart = new CanvasJS.Chart("canvas", {
+                    axisY: {
+                        includeZero: false
+                    },
+                    data: [{
+                        type: "line",
+                        dataPoints: {{ dataPoints|safe }}
+                    }]
+                });
+                chart.render();
+            });
+        </script>
     </body>
 </html>
